--- a/uu_kucharka_maing01-hi/package.json
+++ b/uu_kucharka_maing01-hi/package.json
@@ -7,6 +7,8 @@
   "namespace": "UuKucharka",
   "spec": "uu5-app; uu_appg01_devkit@5.10.0",
   "dependencies": {
+    "@mdi/js": "^7.2.96",
+    "@mdi/react": "^1.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "react-bootstrap": "^2.7.2",
